<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_kss_rsi_driver</name>
  <version>0.9.0</version>
  <description>A ROS2 hardware interface for use with KUKA RSI</description>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <maintainer email="kovacsge.work@gmail.com">Gergely Kovacs</maintainer>
  <maintainer email="szitanics@gmail.com">Mark Szitanics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>kuka_drivers_core</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_manager_msgs</depend>
  <depend>std_msgs</depend>

  <depend>tinyxml_vendor</depend>

  <exec_depend>ros2_control</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>kuka_robot_descriptions</exec_depend>

  <test_depend>kuka_rsi_simulator</test_depend>
  <test_depend>ros2lifecycle</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
